@@ -5,6 +5,8 @@
 - Fixed bug #9567: query->bindValue() sets value in query->boundParameters
 - Fixed bug #9466: Oracle limit does not return $this.
 - Fixed ezcQueryExpressionOracle, corrected processing subString() in Oracle.
+- Fixed bug #9439: PersistentObject doesn't handle sequence value 
+  generation right for Oracle.
 
 
 1.2beta2 - Monday 20 November 2006
